--- a/Sections/2_Theory_Models/SixS.tex
+++ b/Sections/2_Theory_Models/SixS.tex
@@ -1,4 +1,3 @@
-\newpage
 \section{Synchrotron radiation for the study of materials} \label{sec:SIXS}
 
 \subsection{Synchrotron radiation}
@@ -186,7 +185,7 @@ Overall, this experimental setup allows the exploration of a large, multi-diment
 
 When performing BCDI measurements, a smaller version of the XCAT is used which is light enough to be supported vertically by the goniometer (fig \ref{fig:MEDV}).
 The volume in the reactor is the same.
-Moreover, the same sample holder can be used which carries the graphite heater, the only setback being the lack of sputtering gun.
+Moreover, the same sample holder can be used which carries the graphite heater, the only setback being the lack of sputtering gun and the impossibility to study catalytic reaction in batch mode (as opposite to flow mode).
 
 The measurement process for the collection of the scattered intensity is detailed in sec. \ref{sec:DataCollectionSXRD} for surface x-ray diffraction and in sec. \ref{sec:DataCollectionBCDI} for Bragg coherent diffraction imaging.
 Since this reactor was designed for SXRD together with a 6-circle diffractometer, the entire surface of the sample is accessible during the experiment which allows the full access to the reciprocal space to probe any particular symmetry, limited only by the extent of the Ewald sphere (\textit{i.e.} a maximum extent in $\vec{q}$).
