--- a/Sections/2_Theory_Models/X-ray_interaction_matter.tex
+++ b/Sections/2_Theory_Models/X-ray_interaction_matter.tex
@@ -1,10 +1,9 @@
-\newpage
 \section{X-ray interaction with matter} \label{sec:XRIntMatter}
 
 Understanding the different mechanisms at play when photons interact with matter is of crucial importance to be able to decide how to use x-rays as a probe in material science.
 Each phenomenon is at the source of different techniques, scattering brings surface x-ray diffraction (SXRD) and Bragg coherent diffraction imaging (BCDI), two techniques used in the frame of this thesis that give complementary information about the sample structure bulk and surface.
 
-X-ray absorption together with the photoelectric effect explained by Einstein in 1905 are at the source of a third technique used, x-ray photoelectron spectroscopy, which yields information specific to the nature of the adsorbates on the sample's surface.
+X-ray absorption together with the photoelectric effect explained by Einstein in \cite*{Einstein1905} are at the source of a third technique used, x-ray photoelectron spectroscopy, which yields information specific to the nature of the adsorbates on the sample's surface.
 
 \begin{table}[!htb]
     \centering
@@ -34,7 +33,6 @@ X-ray absorption together with the photoelectric effect explained by Einstein in
     \includegraphics[height=0.25\textwidth]{/home/david/Documents/PhD/Presentations/Slides/PhdSlides/Figures/xps_data/transition_xps.png}
     \caption{Slice of 3D diffraction pattern collected at the SixS beamline at the SOLEIL synchrotron (left). Reciprocal space map in HK plane collected at the SixS beamline at the SOLEIL synchrotron (middle). Ambient pressure XPS spectra collected during a transition between two atmospheres (Ar and O$_2$), collected at the B07 beamline at the Diamond synchrotron (right).}
 \end{figure}
-
 
 In this chapter we will discuss the origin of each technique from fundamentals that not only tailor their experimental design but also their operability and sensitivity.
 
