--- a/references.bib
+++ b/references.bib
@@ -14,6 +14,35 @@ volume = {90},
 year = {2002}
 }
 
+@Article{Anstine2023,
+author={Anstine, Dylan M.
+and Isayev, Olexandr},
+title={Machine Learning Interatomic Potentials and Long-Range Physics},
+journal={The Journal of Physical Chemistry A},
+year={2023},
+month={Mar},
+day={23},
+publisher={American Chemical Society},
+volume={127},
+number={11},
+pages={2417-2431},
+issn={1089-5639},
+doi={10.1021/acs.jpca.2c06778},
+}
+
+
+@Article{Einstein1905,
+author={Einstein, A.},
+title={{\"U}ber einen die Erzeugung und Verwandlung des Lichtes betreffenden heuristischen Gesichtspunkt},
+journal={Annalen der Physik},
+year={1905},
+volume={322},
+number={6},
+pages={132-148},
+issn={0003-3804},
+doi={10.1002/andp.19053220607},
+}
+
 @article{Dupraz2022,
    author = {Maxime Dupraz and Ni Li and Jérôme Carnis and Longfei Wu and Stéphane Labat and Corentin Chatelier and Rim Van De Poll and Jan P Hofmann and Ehud Almog and Steven J Leake and Yves Watier and Sergey Lazarev and Fabian Westermeier and Michael Sprung and Emiel J M Hensen and Olivier Thomas and Eugen Rabkin and Marie-ingrid Richard},
    doi = {10.1038/s41467-022-30592-1},
@@ -170,6 +199,73 @@ pages = {8261--8273},
 title = {{How Surface Species Drive Product Distribution during Ammonia Oxidation: An STM and Operando APXPS Study}},
 year = {2021}
 }
+
+@Article{Meirer2018,
+author={Meirer, Florian
+and Weckhuysen, Bert M.},
+title={Spatial and temporal exploration of heterogeneous catalysts with synchrotron radiation},
+journal={Nature Reviews Materials},
+year={2018},
+month={09},
+day={01},
+volume={3},
+number={9},
+pages={324-340},
+abstract={Solid catalysts are the workhorses that convert feedstock molecules into fuels, chemicals and materials. Solid catalysts are highly complex, porous, multi-elemental and often hierarchically structured materials. Scientists are therefore confronted with a formidable challenge to understand the functioning of solid catalysts and, based on this knowledge, to design and make materials with superior performance and overall stability. In this Review, we summarize the latest developments in the spatial and temporal characterization of solid catalysts using synchrotron radiation to uncover their structure and function. Attention is focused on applications using either X-rays or infrared light available from synchrotron radiation sources. In these applications, microscopy and microspectroscopy are used to study heterogeneous catalysts under working conditions and at different length scales, more specifically, from the level of a microreactor down to a single catalyst particle. Finally, we offer a perspective on what instrumental developments at synchrotron radiation sources may bring to realize the dream of recording a molecular movie of a solid catalyst at high temperature and pressure.},
+issn={2058-8437},
+doi={10.1038/s41578-018-0044-5},
+}
+
+
+
+@Article{Kitchin2018,
+author={Kitchin, John R.},
+title={Machine learning in catalysis},
+journal={Nature Catalysis},
+year={2018},
+month={04},
+day={01},
+volume={1},
+number={4},
+pages={230-232},
+abstract={Catalysis is a complex, multidimensional and multiscale field of research. Machine learning is helping to build better models, understand catalysis research and generate new knowledge about catalysis.},
+issn={2520-1158},
+doi={10.1038/s41929-018-0056-y},
+}
+
+@article{Schlexer2019,
+author = {Schlexer Lamoureux, Philomena and Winther, Kirsten T. and Garrido Torres, Jose Antonio and Streibel, Verena and Zhao, Meng and Bajdich, Michal and Abild-Pedersen, Frank and Bligaard, Thomas},
+title = {Machine Learning for Computational Heterogeneous Catalysis},
+journal = {ChemCatChem},
+volume = {11},
+number = {16},
+pages = {3581-3601},
+keywords = {Computational chemistry, density functional theory, heterogeneous catalysis, machine learning, materials science},
+doi = {https://doi.org/10.1002/cctc.201900595},
+abstract = {Abstract Big data and artificial intelligence has revolutionized science in almost every field – from economics to physics. In the area of materials science and computational heterogeneous catalysis, this revolution has led to the development of scientific data repositories, as well as data mining and machine learning tools to investigate the vast materials space. The goal of using these tools is to establish a deeper understanding of the relations between materials properties and activity, selectivity and stability – the important figures of merit in catalysis. Based on these insights, catalyst design principles can be established, which hopefully lead us to discover highly efficient catalysts to solve pressing issues for a sustainable future and the synthesis of highly functional materials, chemicals and pharmaceuticals. The inherent complexity of catalytic reactions quests for machine learning methods to efficiently navigate through the high-dimensional hyper-surfaces in structure optimization problems to determine relevant chemical structures and transition states. In this review, we show how cutting edge data infrastructures and machine learning methods are being used to address problems in computational heterogeneous catalysis.},
+year = {2019}
+}
+
+
+
+@Article{Schauermann2013,
+author={Schauermann, Swetlana
+and Nilius, Niklas
+and Shaikhutdinov, Shamil
+and Freund, Hans-Joachim},
+title={Nanoparticles for Heterogeneous Catalysis: New Mechanistic Insights},
+journal={Accounts of Chemical Research},
+year={2013},
+month={08},
+day={20},
+publisher={American Chemical Society},
+volume={46},
+number={8},
+pages={1673-1681},
+issn={0001-4842},
+doi={10.1021/ar300225s},
+}
+
 @article{Hammer2016,
 abstract = {The complex hexagonal reconstructions of the (001) surfaces of platinum and gold have been under debate for decades. Here, the structural details of the Pt(001) reconstruction have been quantitatively reinvestigated by combining the high resolving power of scanning tunneling microscopy (STM) and spot profile analysis low energy electron diffraction (SPA-LEED). In addition, LEED simulations based on a Moir{\'{e}} approach have been applied. Annealing temperatures around 850 °C yield a superstructure that approaches a commensurable c(26.6×118) substrate registry. It evolves from a Moir{\'{e}}-like buckling of a compressed hexagonal top layer (hex) where atomic rows of the hex run parallel to atomic rows of the square substrate. Annealing at 920 °C stimulates a continuous rotation of the hex where all angles between ±0.7° are simultaneously realized. At temperatures around 1080 °C, the nonrotated hex coexists with a hex that is rotated by about 0.75°. Annealing at temperatures around 1120 °C yield a locking of the hex in fixed rotation angles of 0.77°, 0.88°, and 0.94°. At temperatures around 1170 °C, the Pt(001)-hex-R 0.94° prevails as the energetically most favored form of the rotated hex.},
 annote = {The latter has been realized already by Heinz et al. [70] who had shown that the main features of the diffraction pattern of the Pt(001)-hex can be explained by a simple double diffraction process occurring from a hexagonal surface layer and quadratic bulk layers.},
@@ -605,6 +701,23 @@ title = {{Subsurface oxygen formation on Pt(1 0 0): Experiments and modeling}},
 volume = {105},
 year = {2005}
 }
+
+@article{Molenbroek2009,
+   abstract = {The introduction of in situ techniques has had a vast impact on research and development in the area of heterogeneous catalysis as emphasized in many reviews and monographs. Recently, the number of in situ techniques that can give information at the atomic scale has increased significantly and new possibilities exist for making the measurements under industrially relevant conditions. In order to fully exploit the results from the in situ and operando studies, it has also become increasingly gainful to combine the experimental studies with theoretical methodologies based on, for example, Density Functional Theory (DFT). This has allowed one to extract more detailed atomic-scale information from the measurements and it has also allowed the establishment of detailed structure-activity relationships. Furthermore, the interplay between in situ techniques and theory has helped bridging the pressure gap such that in situ information obtained at conditions far from industrial ones may be used in a more relevant manner. Here, we will illustrate how microscopy-, spectroscopy- and X-ray-based techniques in combination with experimental and theoretical surface science methods can aid industrial catalyst developments. We will do this by presenting examples of our current understanding and latest developments in the areas of heterogeneous nano-particle catalysts for methanol synthesis, steam reforming and hydrotreating. © Springer Science+Business Media, LLC 2009.},
+   author = {Alfons M. Molenbroek and Stig Helveg and Henrik Topsøe and Bjerne S. Clausen},
+   doi = {10.1007/s11244-009-9314-1},
+   issn = {10225528},
+   issue = {10},
+   journal = {Topics in Catalysis},
+   keywords = {Heterogeneous catalysis,In situ characterization techniques,Nano-particles},
+   month = {9},
+   pages = {1303-1311},
+   title = {Nano-particles in heterogeneous catalysis},
+   volume = {52},
+   year = {2009},
+}
+
+
 @article{Barteau1981,
 abstract = {The kinetics of the CO oxidation reaction were examined on the Pt(100)-(5 × 20) surface under UHV conditions. The transient isothermal rate of CO2 production was examined both for exposure of an oxygen-dosed surface to a beam of CO and for exposure of a CO-dosed surface to a beam of O2. Langmuir-Hinshelwood kinetics were found to apply in both cases. For the reaction of CO with preadsorbed oxygen atoms, the reaction rate was dependent upon the square-root of the oxygen atom coverage, suggesting that oxygen atoms were adsorbed in islands on this surface. The oxidation of preadsorbed CO was observed only when the initial CO concentrations were less than 0.5 monolayer (c(2 × 2) structure), suggesting that the dissociative adsorption of oxygen required adjacent four-fold surface sites. The activation energy calculated for the reaction of CO with preadsorbed oxygen was 31.4 kcal/mol. This value was 30 kcal/mol greater than the activation energy measured for the reaction of O2 with preadsorbed CO. Strong attractive interactions within the oxygen islands were at least partially responsible for this difference. The reaction kinetics in both cases changed dramatically below 300 K; this change is believed to be due to phase separation at the lower temperature. {\textcopyright} 1981.},
 annote = {weiiird sentence},
@@ -672,33 +785,14 @@ and Gagliardi, Laura},
 title={Beyond Density Functional Theory: The Multiconfigurational Approach To Model Heterogeneous Catalysis},
 journal={ACS Catalysis},
 year={2019},
-month={Sep},
+month={09},
 day={06},
 publisher={American Chemical Society},
 volume={9},
 number={9},
 pages={8481-8502},
 doi={10.1021/acscatal.9b01775},
-url={https://doi.org/10.1021/acscatal.9b01775}
 }
-
-
-
-@article{Molenbroek2009,
-   abstract = {The introduction of in situ techniques has had a vast impact on research and development in the area of heterogeneous catalysis as emphasized in many reviews and monographs. Recently, the number of in situ techniques that can give information at the atomic scale has increased significantly and new possibilities exist for making the measurements under industrially relevant conditions. In order to fully exploit the results from the in situ and operando studies, it has also become increasingly gainful to combine the experimental studies with theoretical methodologies based on, for example, Density Functional Theory (DFT). This has allowed one to extract more detailed atomic-scale information from the measurements and it has also allowed the establishment of detailed structure-activity relationships. Furthermore, the interplay between in situ techniques and theory has helped bridging the pressure gap such that in situ information obtained at conditions far from industrial ones may be used in a more relevant manner. Here, we will illustrate how microscopy-, spectroscopy- and X-ray-based techniques in combination with experimental and theoretical surface science methods can aid industrial catalyst developments. We will do this by presenting examples of our current understanding and latest developments in the areas of heterogeneous nano-particle catalysts for methanol synthesis, steam reforming and hydrotreating. © Springer Science+Business Media, LLC 2009.},
-   author = {Alfons M. Molenbroek and Stig Helveg and Henrik Topsøe and Bjerne S. Clausen},
-   doi = {10.1007/s11244-009-9314-1},
-   issn = {10225528},
-   issue = {10},
-   journal = {Topics in Catalysis},
-   keywords = {Heterogeneous catalysis,In situ characterization techniques,Nano-particles},
-   month = {9},
-   pages = {1303-1311},
-   title = {Nano-particles in heterogeneous catalysis},
-   volume = {52},
-   year = {2009},
-}
-
 
 @Article{Yawei2015,
 author ="Li, Yawei and Chan, Siew Hwa and Sun, Qiang",
@@ -764,10 +858,8 @@ year = {2015}
 abstract = {Self-consistent density functional calculations for the adsorption of O and CO, and the dissociation of CO on strained and unstrained Ru(0001) surfaces are used to show how strained metal surfaces have chemical properties that are significantly different from those of unstrained surfaces. Surface reactivity increases with lattice expansion, following a concurrent up-shift of the metal d states. Consequences for the catalytic activity of thin metal overlayers are discussed.},
 author = {Mavrikakis, Manos and Hammer, B. and Norskov, J.K.},
 doi = {10.1016/j.jcat.2020.07.030},
-file = {:home/david/Documents/PhD/Papers/PhysRevLett.81.2819.pdf:pdf},
 issn = {10902694},
 journal = {Physical Review Letters},
-
 number = {13},
 title = {{Effect of Strain on the Reactivity of Metal Surfaces}},
 volume = {81},
@@ -1224,11 +1316,26 @@ title = {{Phase retrieval for Bragg coherent diffraction imaging at high x-ray e
 volume = {99},
 year = {2019}
 }
+
+@incollection{ROSS2019,
+title = {Chapter 7 - The Kinetics and Mechanisms of Catalytic Reactions},
+editor = {Julian R.H. Ross},
+booktitle = {Contemporary Catalysis},
+publisher = {Elsevier},
+address = {Amsterdam},
+pages = {161-186},
+year = {2019},
+isbn = {978-0-444-63474-0},
+doi = {https://doi.org/10.1016/B978-0-444-63474-0.00007-2},
+author = {Julian R.H. Ross},
+keywords = {Kinetics of unimolecular catalytic reactions, enzyme kinetics, Michaelis–Menton kinetics, inhibition by product, kinetics of bimolecular catalytic reactions, Langmuir–Hinshelwood mechanism, true and apparent activation energies, Eley–Rideal mechanism, Mars–van Krevelen mechanism, kinetics of hydrocarbon oxidation, pressure functions, kinetics of ammonia synthesis and decomposition, kinetics of ethane hydrogenolysis, kinetics of methanation, kinetics of formic acid decomposition},
+abstract = {This chapter describes the various different types of mechanism that are encountered in studying heterogeneously catalyzed reactions, starting with a discussion of the more formal mechanistic expressions and their applications and proceeding to show some examples of mechanistic studies from the literature.}
+}
+
 @article{Ulvestad2015,
 abstract = {Topological defects can markedly alter nanomaterial properties. This presents opportunities for "defect engineering," where desired functionalities are generated through defect manipulation. However, imaging defects in working devices with nanoscale resolution remains elusive. We report three-dimensional imaging of dislocation dynamics in individual battery cathode nanoparticles under operando conditions using Bragg coherent diffractive imaging. Dislocations are static at room temperature and mobile during charge transport. During the structural phase transformation, the lithium-rich phase nucleates near the dislocation and spreads inhomogeneously. The dislocation field is a local probe of elastic properties, and we find that a region of the material exhibits a negative Poisson's ratio at high voltage. Operando dislocation imaging thus opens a powerful avenue for facilitating improvement and rational design of nanostructured materials.},
 author = {Ulvestad, U. and Singer, A. and Clark, J. N. and Cho, H. M. and Kim, J. W. and Harder, R. and Maser, J. and Meng, Y. S. and Shpyrko, O. G.},
 doi = {10.1126/science.aaa1313},
-file = {:home/david/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Ulvestad et al. - 2015 - Topological defect dynamics in operando battery nanoparticles.pdf:pdf},
 issn = {10959203},
 journal = {Science},
 number = {6241},
@@ -1737,7 +1844,6 @@ year = {2011}
 abstract = {The focus on surface lattice strain in nanostructures as a fundamental research topic has gained momentum in recent years as scientists investigated its significant impact on the surface electronic structure and catalytic properties of nanomaterials. Researchers have begun to tell a more complete story of catalysis from a perspective which brings this concept to the forefront of the discussion. The nano-'realm' makes the effects of surface lattice strain, which acts on the same spatial scales, more pronounced due to a higher ratio of surface to bulk atoms. This is especially evident in the field of metal nanoparticle catalysis, where displacement of atoms on surfaces can significantly alter the sorption properties of molecules. In part, the concept of strain-engineering for catalysis opened up due to the achievements that were made in the synthesis of a more sophisticated nanoparticle library from an ever-expanding set of methodologies. Developing synthesis methods for metal nanoparticles with well-defined and strained architectures is a worthy goal that, if reached, will have considerable impact in the search for catalysts. In this review, we summarize the recent accomplishments in the area of surface lattice-strained metal nanoparticle synthesis, framing the discussion from the important perspective of surface lattice strain effects in catalysis.},
 author = {Sneed, Brian T. and Young, Allison P. and Tsung, Chia Kuang},
 doi = {10.1039/c5nr02529j},
-file = {:home/david/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Sneed, Young, Tsung - 2015 - Building up strain in colloidal metal nanoparticle catalysts.pdf:pdf},
 issn = {20403372},
 journal = {Nanoscale},
 number = {29},
@@ -2383,7 +2489,7 @@ and Weckhuysen, Bert M.},
 title={The concept of active site in heterogeneous catalysis},
 journal={Nature Reviews Chemistry},
 year={2022},
-month={Feb},
+month={02},
 day={01},
 volume={6},
 number={2},
@@ -2485,6 +2591,14 @@ author = {Jens Als-Nielsen, Des McMorrow},
 year = {2011},
 publisher = {John Wiley and Sons, Ltd},
 doi = {10.1002/9781119998365},
+}
+
+@book{Hagen2016,
+title = {Industrial Catalysis: A Practical Approach},
+author = {Jens Hagen},
+year = {2016},
+publisher = {John Wiley and Sons, Ltd},
+doi = {10.1002/3527607684},
 }
 
 @book{Willmott,
@@ -2721,7 +2835,7 @@ year = {2013}
   pages = {116105},
   numpages = {4},
   year = {2004},
-  month = {Sep},
+  month = {09},
   publisher = {American Physical Society},
   doi = {10.1103/PhysRevLett.93.116105},
   url = {https://link.aps.org/doi/10.1103/PhysRevLett.93.116105}
@@ -3163,11 +3277,27 @@ title = {{Active site localization of methane oxidation on Pt nanocrystals}},
 volume = {9},
 year = {2018}
 }
+
+@generic{Boukouvala2021,
+   abstract = {Unlike in the bulk, at the nanoscale shape dictates properties. The imperative to understand and predict nanocrystal shape led to the development, over several decades, of a large number of mathematical models and, later, their software implementations. In this review, the various mathematical approaches used to model crystal shapes are first overviewed, from the century-old Wulff construction to the year-old (2020) approach to describe supported twinned nanocrystals, together with a discussion and disambiguation of the terminology. Then, the multitude of published software implementations of these Wulff-based shape models are described in detail, describing their technical aspects, advantages and limitations. Finally, a discussion of the scientific applications of shape models to either predict shape or use shape to deduce thermodynamic and/or kinetic parameters is offered, followed by a conclusion. This review provides a guide for scientists looking to model crystal shape in a field where ever-increasingly complex crystal shapes and compositions are required to fulfil the exciting promises of nanotechnology.},
+   author = {Christina Boukouvala and Joshua Daniel and Emilie Ringe},
+   doi = {10.1186/s40580-021-00275-6},
+   issn = {21965404},
+   issue = {1},
+   journal = {Nano Convergence},
+   keywords = {Nanoparticle shape,Shape modelling,Shape modelling tools,Winterbottom construction,Wulff construction},
+   month = {12},
+   publisher = {Korea Nano Technology Research Society},
+   title = {Approaches to modelling the shape of nanocrystals},
+   volume = {8},
+   year = {2021},
+}
+
+
 @article{Passos2020,
 abstract = {Understanding catalysts strain dynamic behaviours is crucial for the development of cost-effective, efficient, stable and long-lasting catalysts. Here, we reveal in situ three-dimensional strain evolution of single gold nanocrystals during a catalytic CO oxidation reaction under operando conditions with coherent X-ray diffractive imaging. We report direct observation of anisotropic strain dynamics at the nanoscale, where identically crystallographically-oriented facets are qualitatively differently affected by strain leading to preferential active sites formation. Interestingly, the single nanoparticle elastic energy landscape, which we map with attojoule precision, depends on heating versus cooling cycles. The hysteresis observed at the single particle level is following the normal/inverse hysteresis loops of the catalytic performances. This approach opens a powerful avenue for studying, at the single particle level, catalytic nanomaterials and deactivation processes under operando conditions that will enable profound insights into nanoscale catalytic mechanisms.},
 author = {Passos, Aline R. and Rochet, Am{\'{e}}lie and Manente, Luiza M. and Suzana, Ana F. and Harder, Ross and Cha, Wonsuk and Meneau, Florian},
 doi = {10.1038/s41467-020-18622-2},
-file = {:home/david/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Passos et al. - 2020 - Three-dimensional strain dynamics govern the hysteresis in heterogeneous catalysis.pdf:pdf},
 issn = {20411723},
 journal = {Nature Communications},
 number = {1},
@@ -3303,10 +3433,8 @@ abstract  ="Defects in strongly correlated materials such as V2O3 play influenti
 
 @article{Karpov2019,
 abstract = {Strain engineering is a promising technology with potential application in memory devices, electronic elements, photoactive materials, etc. Nanoscale imaging of the strain is therefore important to better understand the operating condition of the device, growth processes, and influences of other factors. X-rays offer the advantage over electron-based techniques in that they offer high spatial resolution and access to volumetric information within nanostructured materials. This paper describes the basic physics behind strain at the nanoscale and provides a concise summary of the efforts in coherent diffractive imaging for the imaging of the displacement fields in nanocrystals. Although the approach is still under development, with instruments being continuously improved, a number of important results have already been demonstrated.},
-annote = {Nice review},
 author = {Karpov, Dmitry and Fohtung, Edwin},
 doi = {10.1063/1.5054294},
-file = {:home/david/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Karpov, Fohtung - 2019 - Bragg coherent diffractive imaging of strain at the nanoscale.pdf:pdf},
 issn = {10897550},
 journal = {Journal of Applied Physics},
 number = {12},
@@ -5510,6 +5638,75 @@ The high temperature stability of thin film Pd2Si is controlled by time- tempera
    file = {Li et al. - 2010 - Grain rotation dependent non-homogeneous deformati.pdf:/Users/marieingridrichard/Zotero/storage/JXJFRVWE/Li et al. - 2010 - Grain rotation dependent non-homogeneous deformati.pdf:application/pdf}
 }
 
+@article{MARS1954,
+title = {Oxidations carried out by means of vanadium oxide catalysts},
+journal = {Chemical Engineering Science},
+volume = {3},
+pages = {41-59},
+year = {1954},
+note = {The Proceedings of the Conference on Oxidation Processes},
+issn = {0009-2509},
+doi = {https://doi.org/10.1016/S0009-2509(54)80005-4},
+author = {P. Mars and D.W. {van Krevelen}},
+}
+
+@article{ZHANG2019,
+title = {How to Measure the Reaction Performance of Heterogeneous Catalytic Reactions Reliably},
+journal = {Joule},
+volume = {3},
+number = {12},
+pages = {2876-2883},
+year = {2019},
+issn = {2542-4351},
+doi = {https://doi.org/10.1016/j.joule.2019.11.005},
+author = {Mengtao Zhang and Meng Wang and Bingjun Xu and Ding Ma},
+abstract = {Ding Ma is a professor of Peking University. He is an advisory member for various journals, has been Associate Editor for the catalysis journal of RSC, Catalysis Science & Technology, since 2014, and was elected as a Fellow of the Royal Society of Chemistry in 2016. His research interests are heterogeneous catalysis, especially those related with energy issues, including C1 chemistry (methane, CO2, and syngas conversion), new reaction routes for sustainable chemistry, and the development of an in situ spectroscopic method that can be operated at working reaction conditions to study reaction mechanisms. Bingjun Xu is an Associate Professor in the Department of Chemical and Biomolecular Engineering at University of Delaware. He received his PhD in Physical Chemistry, advised by Prof. Friend, from Harvard University in 2011 and worked with Prof. Davis at Caltech as a postdoctoral researcher. The overarching goal of Xu research group is to develop innovative strategies to produce renewable electricity, fuels, and chemicals by the rational design of efficient thermo- and electro-catalytic processes. A special focus is placed on the mechanistic understanding of surface-mediated reactions by employing and developing state-of-the-art spectroscopic and kinetic techniques. Meng Wang is a Research Scientist in the College of Chemistry and Molecular Engineering at Peking University. He received his PhD in Chemistry from Technical University of Munich, advised by Prof. Lercher, in 2018 and worked in Pacific Northwest National Laboratory as a Research Associate from 2015 to 2019. Wang’s principal research task focuses on deciphering the kinetic and mechanistic pathways for catalytic reactions by combining reaction kinetics, isotopic experiments, and various in situ characterization methods. Mengtao Zhang is a PhD student in the College of Chemistry and Molecular Engineering at Peking University (Prof. Ding Ma). He received his BS (Chemistry) from Nanjing University in 2015. His research interests include water activation and hydrogen production, CO2 and other greenhouse gas conversion into desirable chemicals, design and development of new catalysts, and operando reaction mechanism and kinetics study.}
+}
+
+@article{WACHS2022,
+title = {Number of surface sites and turnover frequencies for oxide catalysts},
+journal = {Journal of Catalysis},
+volume = {405},
+pages = {462-472},
+year = {2022},
+issn = {0021-9517},
+doi = {https://doi.org/10.1016/j.jcat.2021.12.032},
+author = {Israel E. Wachs},
+keywords = {Oxides, Redox, Acid, Ns, TOF},
+abstract = {Unlike for metal catalysts where selective chemisorption probes (H2, O2, CO and N2O) have been successfully applied to count the number of active surface sites and allow determination of TOF values, the analogous situation for oxide catalysts has developed very slowly. The reason for the sluggish development of selective chemisorption probes for oxides is that the same chemisorption probes that work well with metals aren’t compatible with oxides since these chemical probes weakly adsorb on oxides. Methanol, however, is a very reactive molecule that has been found to readily chemisorb on oxides and allows for quantitative determination of the number of active surface sites (Ns). In this mini-review, the determination of the number of active sites by methanol chemisorption is reviewed with examples for pure oxides (one-component oxides), supported oxides (submonolayer, monolayer and above monolayer) and bulk mixed oxides (surface enriched oxide present in submonolayer, monolayer and in excess of monolayer coverages).}
+}
+
+@Article{Boudart1995,
+author={Boudart, M.},
+title={Turnover Rates in Heterogeneous Catalysis},
+journal={Chemical Reviews},
+year={1995},
+month={05},
+day={01},
+publisher={American Chemical Society},
+volume={95},
+number={3},
+pages={661-666},
+issn={0009-2665},
+doi={10.1021/cr00035a009},
+url={https://doi.org/10.1021/cr00035a009}
+}
+
+@article{Doornkamp2000,
+title = {The universal character of the Mars and Van Krevelen mechanism},
+journal = {Journal of Molecular Catalysis A: Chemical},
+volume = {162},
+number = {1},
+pages = {19-32},
+year = {2000},
+note = {In honour of Prof. H. Knozinger on the occasion of his 65th},
+issn = {1381-1169},
+doi = {https://doi.org/10.1016/S1381-1169(00)00319-8},
+author = {C Doornkamp and V Ponec},
+keywords = {Mars and Van Krevelen mechanism, Catalytic activation, Deoxygenation of nitrocompounds, Deoxygenation of carboxylic acids, Oxygen exchange reaction},
+abstract = {This review deals with the mechanism that is arbitrarily called below the Mars and Van Krevelen (MvK) mechanism. The characteristic feature of this mechanism is that some products of the reaction leave the solid catalysts’ surface with one or more constituents of the catalysts’ lattice. First in this review, the position of this mechanism amongst other ways of catalytic activation will be defined. Then, the experimental evidence for this mechanism will be presented. Some less common reactions running with this mechanism will be discussed in more detail, among them the deoxygenation of nitrocompounds and carboxylic acids. The participation of the lattice components (O, S, Cl, H) in the formation of products leads to a relation of the catalytic activity with the thermodynamic parameters characterizing the catalysts lattice. A proper use of such quantified relation will be also discussed.}
+}
+
 @article{janssen_celebrating_2009,
    title = {Celebrating the 100th anniversary of the {Stoney} equation for film stress: {Developments} from polycrystalline steel strips to single crystal silicon wafers},
    volume = {517},
@@ -6608,7 +6805,6 @@ abstract = {Effective Computation in Physics is a handy guide to the types of pr
 author = {Scopatz, Anthony and Huff, Kathryn D},
 isbn = {9781491901533},
 keywords = {Computer software,Computer software Development,Physics,Physics Programming},
-mendeley-groups = {PythonScience},
 publisher = {O'Reilly},
 title = {{Effective computation in physics}},
 year = {2015}
@@ -7736,7 +7932,6 @@ file = {:home/david/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/
 issn = {1521-9615},
 journal = {Computing in Science Engineering},
 keywords = {data structures,high level languages,mathematics c},
-mendeley-groups = {PythonScience},
 number = {2},
 pages = {22--30},
 title = {{The NumPy Array: A Structure for Efficient Numerical Computation}},
@@ -8106,13 +8301,6 @@ keywords = {data post-processing, elemental mapping, space-resolved XAS, XRF ima
    year = {2018},
    pages = {277--282},
    file = {Jacobse et al. - 2018 - Correlation of surface site formation to nanoislan.pdf:/Users/marieingridrichard/Zotero/storage/E4TMLDM2/Jacobse et al. - 2018 - Correlation of surface site formation to nanoislan.pdf:application/pdf}
-}
-
-@book{noauthor_through_2000,
-   title = {through diffraction-pattern oversampling},
-   abstract = {On possible extensions of X-ray crystallography through},
-   year = {2000},
-   file = {Citeseer - Full Text PDF:/Users/marieingridrichard/Zotero/storage/YLKUUTYG/2000 - through diffraction-pattern oversampling.pdf:application/pdf;Citeseer - Snapshot:/Users/marieingridrichard/Zotero/storage/BCY7QCRW/summary.html:text/html}
 }
 
 @article{Kim2019,
