--- a/Sections/1_Introduction/AmmoniaOxidation.tex
+++ b/Sections/1_Introduction/AmmoniaOxidation.tex
@@ -1,4 +1,28 @@
-\textcolor{red}{(The Introduction chapter should contain background information as appropriate, plus definitions of all special and general terms. Your topic should be: clearly stated and defined; have a clear overall purpose; and have clear, relevant and coherent aims and objectives. It is also informative to give a brief description of the contents of the remaining chapters of the thesis. This alerts the reader and prepares them for the rest of the thesis.)}
+% \textcolor{red}{(The Introduction chapter should contain background information as appropriate, plus definitions of all special and general terms. Your topic should be: clearly stated and defined; have a clear overall purpose; and have clear, relevant and coherent aims and objectives. It is also informative to give a brief description of the contents of the remaining chapters of the thesis. This alerts the reader and prepares them for the rest of the thesis.)}
+
+The use of catalysts has several advantages, including faster, selective, and more energy-efficient chemical reactions, enabling them to direct reactions towards producing higher amounts of the desired product while reducing unwanted byproducts \parencite{Schlogl2015}.
+Over the years, scientists have developed specialized catalysts for various real-world applications, today 90\% of chemical processes involve catalysts in at least one of their steps \parencite{WEINER1998915, DeVries2012}.
+Notable advancements in catalysis have led to the production of biodegradable plastics, novel pharmaceuticals, and eco-friendly fuels and fertilizers \parencite{FECHETE20122}.
+
+Several new challenges have emerged in the field of catalysis related to improving efficiency, reducing environmental impact, and developing sustainable processes.
+First, environmental challenges concern minimizing and/or managing by-products, reducing contamination in effluents/wastewaters, and using sustainable sources of raw materials \parencite{LUDWIG2017313, Lange2021} and energy supplies.
+Secondly, economical challenges which imply using cheaper, readily available raw materials, increased productivity, and decreased lag-time between discovery to commercialization \parencite{Keisuke2019, Gunay2021}.
+For example, recent studies suggest that alternative, more economical catalysts, such as non-noble metals \parencite{Zhong2021} and other derived metal-based compounds, need to be tested as possible substitutes for the most frequently used noble metals, which are very efficient but expensive.
+
+Catalysis also has a role to play to combat pollution and create cleaner energy with for example the development of efficient water-splitting technologies \parencite{AHMAD2015599}, and enhancing the use of biomass and other energy vectors such as ammonia \parencite{Fang2022}.
+Finally, challenges also arise in automotive exhaust where catalysts participate in the reduction of the emissions of toxis gases and particles \parencite{WHOAirPollution, GANDHI2003433}.
+Some of the major air pollutants such as nitrogen oxides, ($NO_x$), and particulate matter (PM) are emitted by road traffic (65\% of $NO_x$, $\approx 35\%$ of PM), mainly by diesel vehicles, and directly inhaled by nearby major city inhanbitants.
+To set a striking example, in Paris in 2018, 700 000 inhabitants were exposed to $NO_2$ concentrations exceeding the regulations (fig. \ref{fig:NO2Paris}), 60 000 inhabitants for PM$_{10}$, and all Parisians were concerned by exceeding the WHO recommendations for PM$_{2.5}$ \parencite{AirParis}.
+Air quality is the main environmental concern of Ile-de-France residents (65\% of total mentions) ahead of climate change (63\%) and food (38\%) \parencite{AirParis}.
+
+\begin{figure}[!htb]
+    \centering
+    \includegraphics[width=\textwidth]{/home/david/Documents/PhD/Figures/ammonia/ParisNO2.png}
+    \caption{
+        $NO_2$ levels in Paris are on average twice superior to the annual limit of $40 \, \mu g / m^3$ \parencite{AirParis}.
+    }
+    \label{fig:NO2Paris}
+\end{figure}
 
 \section{The oxidation of Ammonia}
 
@@ -23,11 +47,19 @@ Finally, adsorbed oxygen did not block the ammonia adsorption [12].
 All these facts led to the conclusion that a dual-site mechanism is operative.
 A similar conclusion on the reaction mechanism was made for ammonia oxidation on a supported ruthenium catalyst [34].
 
-\subsection{From industry to model catalysis}
+has been well optimized in industry reaching up to 99\% efficiency towards the production of nitrous oxide,
+
+\section{From industry to model catalysis}
 
 "A long standing conundrum in the catalysis community emerged at the interface between surface science and heterogeneous catalysis, better known as the pressure and materials gap."
 
 Nature Catalysis editorial, 2018.
+
+
+However, there has been a gap between the size of the nanoparticles studied for heterogeneous catalysis by computer methods (a few nm - linked to computational limits) and the size of the particles studied with synchrotron techniques ($>100 nm$) for a simple reason which is that in both diffraction and spectroscopy techniques, the outcoming photon or electron flux is proportionnal to the sample volume (e.g. eq. \ref{eq:ScatteredIntensity}).
+
+In the frame of this thesis, the difference in activity between different crystalline facets for the oxidation of ammonia will be studied with different samples.
+BCDI allows the 3D exploration of a single faceted nanoparticle which comes with a compromise in the strain resolution, whereas SXRD yields information about specific facets since the samples are large monocrystals.
 
 \begin{table}[!htb]
     \centering
@@ -49,7 +81,7 @@ Nature Catalysis editorial, 2018.
 \begin{figure}[!htb]
     \centering
     \includegraphics[height=4cm]{/home/david/Documents/PhD/Presentations/Slides/PhdSlides/Figures/sample/pt_gazes.png}
-    \includegraphics[height=4cm]{/home/david/Documents/PhD/Presentations/Slides/PhdSlides/Figures/bcdi_data/B7/B7_facets.png}
+    \includegraphics[trim=0 100 0 75, clip, height=4cm]{/home/david/Documents/PhD/Presentations/Slides/PhdSlides/Figures/bcdi_data/B7/B7_facets.png}
     \includegraphics[height=4cm]{/home/david/Documents/PhD/Presentations/Slides/PhdSlides/Figures/sample/sxrd_sample.png}
     \caption{Platinum gazes used in industry (left), Reconstructed phase of a Pt particle measured at SixS, its diameter is of about 300 nm (middle), Pt 111 single crystal used in SXRD and XPS experiments, its diameter is of about 8 mm (right).}
 \end{figure}
@@ -60,20 +92,20 @@ The oxidation of ammonia is a catalytic reaction that has had an extremely high 
 
 In this first chapter, the importance of the oxidation of ammonia has been underlined.
 It was shown that despite being a major catalytic process in a multi-billion industry, the exact mechanisms of action are not yet understood.
-If in the frame of this thesis, the focus will be set on the sole oxidation of ammonia that evidently, if not well understood, has been well optimized in industry reaching up to 99\% efficiency towards the production of nitrous oxide, the goal is also to develop methods that can speak to and attract the synchrotron neophyte to the study of heterogeneous catalysis with synchrotron radiation.
+If in the frame of this thesis, the focus will be set on the sole oxidation of ammonia that evidently, the goal is also to develop experimental methods that can speak to and attract the synchrotron neophyte to the study of heterogeneous catalysis with synchrotron radiation, together with efficient and reliable computer methods that allow good data reduction and analysis.
 
-Indeed, if it is of prime interest for a scientist to always be ready to answer to the question \textit{why ?}, one must also realize that the impact one has strongly depends on the application and reach of his work.
+Indeed, if it is of prime interest for a scientist to always be able to understand the fundamentals and to be ready to answer to the question \textit{why ?}, one must also realize that the impact one has strongly depends on the application and reach of his work.
 Keeping this idea in mind, this thesis aims first at bridging the material and pressure gap to bring forth the possibility for synchrotron users to study catalytic reactions at conditions tending to 'real' industry conditions.
 Secondly, a focus has also been set on explaining the origin, advantages, drawbacks and workflows of each technique, especially for Bragg coherent diffraction imaging, a technique that has yet to reach its full potential through the development of 4th generation synchrotrons and powerful computing clusters.
 
 \section{Outline of the Thesis}
 
-The initial chapter of this thesis will provide a concise explanation of the fundamental principles governing the interaction between x-rays and matter.
+The initial chapter of this thesis will provide a concise explanation of heterogeneous catalysis and if the fundamental principles governing the interaction between x-rays and matter.
 This will serve to underscore the origins, benefits, and limitations of each technique employed in the study of the ammonia oxidation.
 Additionally, it will explore how these catalytic reactions can be indirectly observed using x-rays, leveraging the unique signatures they leave on the materials involved.
 The SixS synchrotron beamline, which served as the primary location for conducting the majority of experiments, will be presented.
 Notably, the latest advancements in experimental techniques specific to this beamline will be covered.
-Finally, the latest computer programs used for the analysis of the collected data will be presented so that the reader of this thesis has complete knowledge of every step undertaken to obtain the final results.
+Finally, the latest computer programs used for the analysis of the collected data and the challenges of data analysis will be presented so that the reader of this thesis has complete knowledge of every step undertaken to obtain the final results.
 
 In a second chapter, the results obtained with three different techniques, surface x-ray diffraction, Bragg coherent diffration imaging and x-ray photoelectron spectroscopy, will be presented.
 Each step will be discussed, sample preparation, the choice of experimental conditions, the reproducibility of the results, the quality of the final data as well as the different difficulties encountered during data collection.
